--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
       <p>&copy; <span id="ano"></span> Victoria Silva Estética — Todos os direitos reservados. <br>
     Feito por:<br>
     Stevan Queiroz - RA 100045513 <br>
-    Ivan Louvanco – RA 250027547
+    Ivan Louvanco – RA 250027547<br>
     Juan Alves – RA 250027398<br>
     Thiago Fernandes – RA 250028476<br>
     Vinícius Fernandes – RA 250027978<br>
@@ -238,5 +238,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
